fix theme button mobile

--- a/static/main.css
+++ b/static/main.css
@@ -65,7 +65,7 @@ a.version { position: fixed; bottom: 0; margin: 0px 0px 0px 4px; user-select: no
     div.mobile_gorisontal_void { margin-right: auto; }
     .logo_text_header, .logo_dot_header { display: none; }
     .theme_header_button_pc { display: none; }
-    .theme_header_button_mobile { position: absolute; margin-left: 12px; margin-top: 16px; border-radius: 100px; border: none; cursor: pointer; padding: 2px 3px 0px 3px; }
+    .theme_header_button_mobile { position: absolute; margin-left: 14px; margin-top: 14px; border-radius: 100px; border: none; cursor: pointer; padding: 2px 3px 0px 3px; }
 
     .header {  height: 54px; }
     h1.helper_text { font-size: 32px; text-align: center; padding-top: 32px; padding-bottom: 32px; }
